<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimens_8">

        <ru.androidschool.intensiv.ui.custom.RoundedImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:radius="@dimen/dimens_24"
            tools:src="@drawable/ic_avatar" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_8"
            android:background="@null"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/textColorLight" />

        <TextView
            android:id="@+id/title"
            style="@style/MovieDetails.TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/btn_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:text="Aquaman" />

        <ImageView
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginEnd="@dimen/dimens_8"
            android:contentDescription="@string/poster"
            android:src="@drawable/ic_favorite_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            app:tint="@color/grey" />

        <Button
            android:id="@+id/btn_watch"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimens_32"
            android:layout_marginStart="@dimen/dimens_24"
            android:layout_marginTop="@dimen/dimens_10"
            android:background="@drawable/rounded_button_background"
            android:text="@string/watch"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/movie_rating"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginEnd="@dimen/dimens_8"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@color/colorControlNormal"
            android:stepSize="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:rating="5" />

        <TextView
            android:id="@+id/description"
            style="@style/MovieDetails.NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24"
            android:layout_marginTop="@dimen/dimens_16"
            android:layout_marginEnd="@dimen/dimens_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_watch"
            tools:maxLength="300"
            tools:text="@tools:sample/lorem/random" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_12"
            android:layout_marginTop="@dimen/dimens_4"
            android:layout_marginEnd="@dimen/dimens_12"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:listitem="@layout/item_actor" />

        <TextView
            android:id="@+id/studio_label"
            style="@style/MovieDetails.BoldText"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24"
            android:layout_marginTop="@dimen/dimens_4"
            android:maxLength="6"
            android:text="@string/label_studio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actors_recycler_view" />

        <TextView
            android:id="@+id/studio"
            style="@style/MovieDetails.NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_4"
            android:layout_marginEnd="@dimen/dimens_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/studio_label"
            app:layout_constraintTop_toBottomOf="@+id/actors_recycler_view"
            tools:text="dadad sdasdas dsadadasd dsdads dasasdas dasdasdas dsadasdsa dsadas" />

        <TextView
            android:id="@+id/genre_label"
            style="@style/MovieDetails.BoldText"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24"
            android:layout_marginTop="@dimen/dimens_4"
            android:text="@string/label_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studio" />

        <TextView
            android:id="@+id/genre"
            style="@style/MovieDetails.NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_4"
            android:layout_marginEnd="@dimen/dimens_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/genre_label"
            app:layout_constraintTop_toBottomOf="@+id/studio"
            tools:text="dadad sdasdas dsadadasd dsdads dasasdas dasdasdas dsadasdsa dsadas" />

        <TextView
            android:id="@+id/year_label"
            style="@style/MovieDetails.BoldText"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24"
            android:layout_marginTop="@dimen/dimens_4"
            android:text="@string/year_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/year"
            style="@style/MovieDetails.NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_4"
            android:layout_marginEnd="@dimen/dimens_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/year_label"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            tools:text="dadad sdasdas dsadadasd dsdads dasasdas dasdasdas dsadasdsa dsadas" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>